2001-08-19  Ovidiu Predescu  <ovidiu@cup.hp.com>

	* doc/xslt-process.texi.in: Added line of code for making public
	the xslt-process-install-docbook.

	* lisp/xslt-process.el: Added the ability to automatically
	register Docbook-XSL files by specifying the installation
	directory of DocBook-XSL.

2001-08-16  Ovidiu Predescu  <ovidiu@cup.hp.com>

	* doc/xslt-process.texi.in: Added change log item about the FOP
	support.

	* tests/fo/glossary.xsl: Added.

	* tests/fo/glossary.xml: Added.

	* lisp/xslt-process.el: Added support for PDF rendering using
	Apache's FOP processor.

	* java/Makefile: Added the FOP jar file in the classpath.

	* java/xslt/debugger/cmdline/EmacsObserver.java: Implemented
	displayInfo.

	* java/xslt/debugger/cmdline/Controller.java: Added the toPDF
	command. Generate proper help messages.

	* java/xslt/debugger/cmdline/CmdLineObserver.java: Implement
	displayInfo.

	* java/xslt/debugger/Observer.java: Added displayInfo for messages
	to be displayed by the observer.

	* java/xslt/debugger/Manager.java: Added support for Apache's FOP
	processor.

	* java/xslt/debugger/FOPMessageListener.java: Added. Handles
	displaying of messages from the FOP processor.

2001-08-15  Ovidiu Predescu  <ovidiu@cup.hp.com>

	* doc/xslt-process.texi.in: Added change item for the JVM
	properties patch.

	* lisp/xslt-process.el: Added xslt-process-jvm-option-properties
	to pass properties to the JVM. Suggestion and initial patch from
	Phillip Lord <p.lord@russet.org.uk>.

2001-08-09  Ovidiu Predescu  <ovidiu@cup.hp.com>

	* doc/xslt-process.texi.in: Added defadvice for the xml-mode.

2001-06-20  Ovidiu Predescu  <ovidiu@cup.hp.com>

	* Makefile: Updated the dist target.

	* doc/Makefile: Removed the homepage target.

	* lisp/xslt-process.el: Fixed typo: use fboundp instead of fbound.

	* doc/xslt-process.texi.in: Added subsection on installing elib.

2001-06-19  Ovidiu Predescu  <ovidiu@cup.hp.com>

	* bin/texi2html: Added. This is a slightly modified version of the